@@ -14,6 +14,11 @@ Changelog
   The listTypesForInterface method was broken.
   macadames 10/07/31
 
+* Use the new mediaupload attribute in collective.plonefinder
+  (Force the selection of content-type in jquery.uploadify)
+  macadames 10/07/31
+
+
 3.2.1b
 ------
 
